# PySoils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
pysoils/: SoilGrids_downloader.py
tests/: test.ipynb
